# freemodbus

./: CMakeLists.txt
demo/STM32_CMAKE/: CMakeLists.txt  README.md  demo.c
demo/STM32_CMAKE/port/: port.h  port_internal.h  portevent.c  portserial.c  porttimer.c
demo/STM32_GENERIC/: README.md
demo/STM32_GENERIC/port/: port.h  portevent.c  portserial.c  porttimer.c
modbus/: mb.c
modbus/rtu/: mbrtu.c
